--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-application.mail.lateloans.message= Atenção! Você tem um empréstimo atrasado. Favor devolver o livro o mais rápido possível.
+application.mail.lateloans.message= AtenÃ§Ã£o! VocÃª tem um emprÃ©stimo atrasado. Favor devolver o livro o mais rÃ¡pido possÃ­vel.
+
+
+spring.mail.protocol=smtp
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=
+spring.mail.password=
+
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
+
