Adicionando Logs para a aplicação

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,15 @@ application.mail.default-remetent=mail@library-api.com
 spring.mail.protocol=smtp
 spring.mail.host=smtp.mailtrap.io
 spring.mail.port=2525
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=26c7176aac73c6
+spring.mail.password=023e2f7e6ad04a
 
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
 
 #Habilita todos os endpoints do actuator
 management.endpoints.web.exposure.include=*
+
+#Cria arquivo de log
+logging.file.name=appfile.log
 
