Adicionando configurações para conexão com Spring boot Admin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,10 @@ spring.mail.properties.mail.smtp.starttls.enable = true
 #Habilita todos os endpoints do actuator
 management.endpoints.web.exposure.include=*
 
+
+spring.boot.admin.client.url=http://localhost:8081
+
 #Cria arquivo de log
 logging.file.name=appfile.log
+
 
