--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
     		<artifactId>springfox-swagger-ui</artifactId>
     		<version>2.6.1</version>
 		</dependency>
+		
+		<dependency>
+    		<groupId>de.codecentric</groupId>
+    		<artifactId>spring-boot-admin-starter-client</artifactId>
+    		<version>2.5.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
