Mudando URL do Spring Boot Admin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.mail.properties.mail.smtp.starttls.enable = true
 management.endpoints.web.exposure.include=*
 
 
-spring.boot.admin.client.url=https://gustavo-spring-boot-admin.herokuapp.com/applications
+spring.boot.admin.client.url=http://localhost:8081
 
 #Cria arquivo de log
 logging.file.name=appfile.log
